[package]
name = "day_05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "../prelude" }
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3"
features = [
    "CssStyleDeclaration",
    "Document",
    "HtmlDivElement",
    "Text",
]

[lib]
crate-type = ["cdylib", "rlib"]
