[package]
name = "day_05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = { workspace = true }
prelude = { path = "../prelude" }
wasm-bindgen = "0.2.83"
web-sys = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
