[package]
name = "day_11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.15"
prelude = { path = "../prelude" }
wasm-bindgen = "0.2.83"

[lib]
crate-type = ["cdylib", "rlib"]
