[package]
name = "omnibus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day_01 = { path = "../day_01" }
day_02 = { path = "../day_02" }
day_03 = { path = "../day_03" }
day_05 = { path = "../day_05" }
day_07 = { path = "../day_07" }
day_11 = { path = "../day_11" }
day_12 = { path = "../day_12" }
day_13 = { path = "../day_13" }
day_17 = { path = "../day_17" }
day_18 = { path = "../day_18" }
day_20 = { path = "../day_20" }
day_21 = { path = "../day_21" }
day_23 = { path = "../day_23" }
js-sys = { workspace = true }
wasm-bindgen = "0.2.83"
web-sys = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
